Added forfeit input for games

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,11 +31,13 @@
 </head>
 <body>
 
+	{% autoescape false %}
 	{% block nav %}{% endblock %}
 
     <!-- Page Content -->
 	{% block main %}{% endblock %}
 	<!-- /.container -->
+	{% endautoescape %}
 
 	<footer class="footer">
 		<div class="container">
