--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -113,7 +113,7 @@
 				{% set lastPod ="" %}
 				{% set rank = 1 %}
 				{% for team in standings %}
-					{% if lastPod != team.pod and lastPod != "" -%}
+					{% if lastPod != team.division and lastPod != "" -%}
 						{% set rank = 1 %}
 					</tbody>
 					<thead>
@@ -132,7 +132,7 @@
 					{%- endif %}
 					<tr>
 						<td>{{ rank }}</td>
-						<td>{{ team.pod}}</td>
+						<td>{{ team.division}}</td>
 						<td>{{ team.name }}</td>
 						<td>{{ team.points }} </td>
 						<td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
@@ -141,7 +141,7 @@
 						<td>{{ team.wins_t }}-{{ team.losses_t }}-{{ team.ties_t }}</td>
 					</tr>
 					{% set rank = rank + 1 %}
-					{% set lastPod = team.pod %}
+					{% set lastPod = team.division %}
 				{% endfor %}
 				<tbody>
 			</table>
