--- a/templates/show_update.html
+++ b/templates/show_update.html
@@ -8,9 +8,30 @@
 
 <script>
 jQuery(document).ready(function($) {
-      $(".clickableRow").click(function() {
-            window.document.location = $(this).attr("href");
-      });
+	$(".clickableRow").click(function() {
+		window.document.location = $(this).attr("href");
+	});
+      	
+	$('#toggleComplete').click(function (event) {
+		me = document.getElementById("toggleComplete");
+		var rows = $('#games tr:not(:first)');
+		
+		if (me.value == "off"){
+			me.className = "btn btn-primary"; 	
+			me.value="on";
+			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-ok";
+			
+			var played = rows.filter('.unplayed').show();
+			rows.not( played ).hide();
+		} else if (me.value == "on") {
+			me.className = "btn btn-default"; 	
+			me.value="off";
+			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-remove";
+			
+			rows.show();
+		}
+	});
+
 });
 </script>
 <div id="page_body" class="container">
@@ -20,43 +41,50 @@ jQuery(document).ready(function($) {
 {% for messages in get_flashed_messages() %}
     <div class=flashes> {{ message }} </div>
 {% endfor %}
-
-<table id=games class="table table-striped">
-	<thead>
-		<tr>
-			<th>#</th>
-			<th>Start</th>
-			<th>Pool</th>
-			<th>Black</th>
-			<th></th>
-			<th>White</th>
-			<th></th>
-			
-		</tr>
-	</thead>
-	<tbody>
+	<button id="toggleComplete" type="button" class="btn btn-default" value="off">
+		<span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span> Hide Completed
+	</button>
 	
-	{% for game in games -%}
-		{% if (game.black_tid < 0) or (game.white_tid < 0) %}
-		<tr>
-		{% else %}
-		<tr class='clickableRow' href='{{request.base_url}}?gid={{game.gid}}'>
-		{% endif %}
-			<td>{{ game.gid }}</td>
-			<td>{{ game.day }} {{ game.start_time }}</td>
-			<td>{{ game.pool }}</td>
-			<td class={{game.style_b}}>{{ game.black }} <strong>{{ game.note_b }}</stron></td>
-			<td>{{game.score_b}}</td>
-			<td class={{game.style_w}}>{{ game.white }} <strong>{{ game.note_w }}</strong></td>
-			<td>{{game.score_w}}</td>
-		</tr>
-	{%- endfor %}
-	</tbody>
-</table>
+	<table id=games class="table table-striped">
+		<thead>
+			<tr>
+				<th>#</th>
+				<th>Start</th>
+				<th>Pool</th>
+				<th>Black</th>
+				<th></th>
+				<th>White</th>
+				<th></th>
+			
+			</tr>
+		</thead>
+		<tbody>
+	
+		{% for game in games -%}
+			{% if (game.black_tid < 0) or (game.white_tid < 0) -%}
+			<tr class="unplayed">
+			{% else %}
+				{% if game.score_b != "--" -%} 
+				<tr class='clickableRow played' href='{{request.base_url}}?gid={{game.gid}}'>
+				{% else %}
+				<tr class='clickableRow unplayed' href='{{request.base_url}}?gid={{game.gid}}'>
+				{%- endif %}
+			{%- endif %}
+				<td>{{ game.gid }}</td>
+				<td>{{ game.day }} {{ game.start_time }}</td>
+				<td>{{ game.pool }}</td>
+				<td class={{game.style_b}}>{{ game.black }} <strong>{{ game.note_b }}</stron></td>
+				<td>{{game.score_b}}</td>
+				<td class={{game.style_w}}>{{ game.white }} <strong>{{ game.note_w }}</strong></td>
+				<td>{{game.score_w}}</td>
+			</tr>
+		{%- endfor %}
+		</tbody>
+	</table>
 
-<div class="alert alert-info" role="alert">
-	<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
-</div>
+	<div class="alert alert-info" role="alert">
+		<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
+	</div>
 
 </div>
 {% endblock main %}
