List of divisions now auto populates in nav bar

--- a/templates/show_update.html
+++ b/templates/show_update.html
@@ -42,7 +42,7 @@ jQuery(document).ready(function($) {
     <div class=flashes> {{ message }} </div>
 {% endfor %}
 	<button id="toggleComplete" type="button" class="btn btn-default" value="off">
-		<span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span> Hide Completed
+		Hide Completed <span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
 	</button>
 	
 	<table id=games class="table table-striped">
