--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -18,6 +18,16 @@
 					<li>
 						<a href="/">Main</a>
 					</li>
+					{% if divisions -%}
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Divisions<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+						{% for div in divisions %}
+							<li><a href="/div/{{ div }}">Div {{ div }}</a></li>
+						{% endfor %}
+						</ul>
+					</li>
+					{%- endif %}
 					{% if pods -%}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
