--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -29,7 +29,7 @@
 		{%- endif %}
 		{% set last = team.name %}
 		{%- endfor %}
-		<a class="list-group-item active" href="/">Full Schedule</a>
+		<a class="list-group-item list-group-item-info" href="/">Full Schedule</a>
 	</div>
 	<div class="col-md-8">
 		<ul id=tabNav class="nav nav-pills">
