--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,6 +1,10 @@
 {% block nav %}
     <!-- Navigation -->
+    {% if request.host_url == "http://dev.uwhscores.com/" -%}
+    <nav class="navbar navbar-default navbar-inverse" role="navigation" style="background-color: red;">
+    {% else %}
     <nav class="navbar navbar-default navbar-inverse" role="navigation">
+    {%- endif %}
     	<div id="nav_bar" class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
