--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -12,7 +12,8 @@
 	<div class="row">
 	<div id="team_nav" class="col-md-4 listgroup">
 		<h3>Filter For Team</h3>
-		{% for team in standings|sort(attribute='name') -%}
+		{% for rank in standings -%}
+		{% set team = rank.team %}
 		{% if team.name != last -%}
 		<a class="list-group-item" href="/team/{{ team.team_id  }}">{{ team.name }}</a>
 		{%- endif %}
@@ -109,8 +110,8 @@
 			<table id=standings_tbl class="table table-striped">
 				<thead>
 					<tr>
-						<th>Rank</th>
 						<th>Div</th>
+						<th>Rank</th>
 						<th>Team</th>
 						<th>Points</th>
 						<th>Record</th>
@@ -120,29 +121,27 @@
 					</tr>
 				</thead>
 				<tbody>
-				{% set lastPod ="" %}
-				{% set rank = 1 %}
-				{% for team in standings %}
-					{% if lastPod != team.division and lastPod != "" -%}
-						{% set rank = 1 %}
-					</tbody>
-					<thead>
-						<tr>
-							<th>Rank</th>
-							<th>Div</th>
-							<th>Team</th>
-							<th>Points</th>
-							<th>Record</th>
-							<th>GA</th>
-							<th>GP</th>
-							<th>Overall</th>
-						</tr>
-					</thead>
-					<tbody>
+				{% for rank in standings -%}
+				{% set team = rank.team %}
+					{% if not loop.first and  team.division != lastDiv -%}
+				</tbody>
+				<thead>
+					<tr>
+						<th>Div</th>
+						<th>Rank</th>
+						<th>Team</th>
+						<th>Points</th>
+						<th>Record</th>
+						<th>GA</th>
+						<th>GP</th>
+						<th>Overall</th>
+					</tr>
+				</thead>
+				<tbody>
 					{%- endif %}
 					<tr>
-						<td>{{ rank }}</td>
 						<td>{{ team.division}}</td>
+						<td>{{ rank.place }}</td>
 						<td>{{ team.name }}</td>
 						<td>{{ team.points }} </td>
 						<td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
@@ -150,9 +149,8 @@
 						<td>{{ team.games_played }} </td>
 						<td>{{ team.wins_t }}-{{ team.losses_t }}-{{ team.ties_t }}</td>
 					</tr>
-					{% set rank = rank + 1 %}
-					{% set lastPod = team.division %}
-				{% endfor %}
+					{% set lastDiv = team.division %}
+				{%- endfor %}
 				<tbody>
 			</table>
 			
