--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -111,6 +111,7 @@
 				<thead>
 					<tr>
 						<th>Div</th>
+						<th>Pod</th>
 						<th>Rank</th>
 						<th>Team</th>
 						<th>Points</th>
@@ -123,11 +124,12 @@
 				<tbody>
 				{% for rank in standings -%}
 				{% set team = rank.team %}
-					{% if not loop.first and  team.division != lastDiv -%}
+					{% if not loop.first and (team.div != lastDiv and team.pod != lastPod) -%}
 				</tbody>
 				<thead>
 					<tr>
 						<th>Div</th>
+						<th>Pod</th>
 						<th>Rank</th>
 						<th>Team</th>
 						<th>Points</th>
@@ -141,6 +143,7 @@
 					{%- endif %}
 					<tr>
 						<td>{{ team.division}}</td>
+						<td>{{ team.pod }} </td>
 						<td>{{ rank.place }}</td>
 						<td>{{ team.name }}</td>
 						<td>{{ team.points }} </td>
@@ -150,6 +153,7 @@
 						<td>{{ team.wins_t }}-{{ team.losses_t }}-{{ team.ties_t }}</td>
 					</tr>
 					{% set lastDiv = team.division %}
+					{% set lastPod = team.pod %}
 				{%- endfor %}
 				<tbody>
 			</table>
