Major rework for seeded pods in preperation for ACCs - Removed constraint on Division vs Pods names, seed notation now finds a letter and matches it against the list of divisions or pods - Team list for rendering now explicit getTeams call vs extracting it from standings in the templates - getPods and getDivisions calls consistent in returning lists (from sqlrows) - Some unused functions removed, trimed - Various bug fixes and cleanup

--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -37,22 +37,17 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 						{% for pod in pods %}
-							<li><a href="/pod/{{ pod.pod }}">Pod {{ pod.pod }}</a></li>
+							<li><a href="/pod/{{ pod }}">Pod {{ pod }}</a></li>
 						{% endfor %}
 						</ul>
 					</li>
 					{%- endif %}
-					{% if standings -%}
+					{% if team_list -%}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-						{% set last="" %}
-						{% for rank in standings -%}
-							{% set team = rank.team %}
-							{% if team.name != last -%}
+						{% for team in team_list -%}
 								<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
-							{%- endif %}
-							{% set last = team.name %}
 						{%- endfor %}
 						</ul>
 					</li>
