--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -27,7 +27,11 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Divisions<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 						{% for div in divisions %}
-							<li><a href="/div/{{ div }}">Div {{ div }}</a></li>
+							{% if div.name -%}
+							<li><a href="/div/{{ div.id }}">{{ div.name }}</a></li>
+							{% else %}
+							<li><a href="/div/{{ div.id }}">{{ div.id }} Division</a></li>
+							{%- endif %}
 						{% endfor %}
 						</ul>
 					</li>
@@ -36,9 +40,13 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-						{% for pod in pods %}
-							<li><a href="/pod/{{ pod }}">Pod {{ pod }}</a></li>
-						{% endfor %}
+						{% for pod in pods -%}
+							{% if pod.name -%}
+							<li><a href="/pod/{{ pod.id }}">{{ pod.name }}</a></li>
+							{% else %}
+							<li><a href="/pod/{{ pod.id }}">{{ pod.id }} Pod</a></li>
+							{%- endif %}
+						{%- endfor %}
 						</ul>
 					</li>
 					{%- endif %}
