Added public FAQ page to help users and document tie breakers

--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -59,6 +59,9 @@
 						{%- endfor %}
 						</ul>
 					</li>
+					<li>
+						<a href="/faq">FAQ</a>
+					</li>
 					{%- endif %}
 				</ul>
 	       </div>
