--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -32,7 +32,8 @@
 	<div class="col-md-8">
 	{% with messages = get_flashed_messages() -%}
 		{% if messages %}
-			<div class="alert alert-danger" role="alert">
+			<div class="alert alert-danger alert-dismissible" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			{% for message in messages %}
 				{{ message }}</br>
 			{% endfor %}
