Minor update to FAQ

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -150,6 +150,7 @@
 					<h3 class="panel-title">Q: Why goals allowed and not goal differential?</h3>
 				</div>
 				<div class="panel-body">
+				<p>First, because those are the rules, it is not a decision of this site. For more info on the tie breaker rules, see above.</p>
 				<p>The rules are setup to discourage teams from running up the score against a weaker opponent.</p>
 				<p>If ties were broken on goal differential or most goals it would benefit a team to run up as many goals as possible against
 				a weak team to help them in the tie break later. That's no fun.</p>
