--- a/templates/admin/nav_admin.html
+++ b/templates/admin/nav_admin.html
@@ -19,14 +19,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
             	<ul class="nav navbar-nav navbar-right">
-					<li>
-						<a href="/admin"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
-					</li>
+					<li><a href="/admin"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a></li>
+          <li><a href="/admin/update"><i class="fa fa-fw fa-edit"></i> Update Scores</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-wrench"></i> Admin Functions<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/admin/update"><i class="fa fa-fw fa-edit"></i> Update Scores</a></li>
-							<li><a href="#"><i class="fa fa-fw fa-table"></i> Edit Schedule</a></li>
+              <li><a href="#"><i class="fa fa-fw fa-table"></i> Edit Schedule</a></li>
 							<li><a href="#"><i class="fa fa-fw fa-wrench"></i> Edit Params</a></li>
 						</ul>
 					</li>
