--- a/templates/admin/nav_admin.html
+++ b/templates/admin/nav_admin.html
@@ -1,7 +1,7 @@
 {% block nav %}
     <!-- Navigation -->
     {% if request.host_url == "http://dev.uwhscores.com/" -%}
-    <nav class="navbar navbar-default navbar-inverse" role="navigation" style="background-color: red;">
+    <nav class="navbar navbar-default navbar-inverse" role="navigation" style="background-color: #8A0808;">
     {% else %}
     <nav class="navbar navbar-default navbar-inverse" role="navigation">
     {%- endif %}
