--- a/templates/admin/show_update.html
+++ b/templates/admin/show_update.html
@@ -11,23 +11,23 @@ jQuery(document).ready(function($) {
 	$(".clickableRow").click(function() {
 		window.document.location = $(this).attr("href");
 	});
-      	
+
 	$('#toggleComplete').click(function (event) {
 		me = document.getElementById("toggleComplete");
 		var rows = $('#games tr:not(:first)');
-		
+
 		if (me.value == "off"){
-			me.className = "btn btn-primary"; 	
+			me.className = "btn btn-primary";
 			me.value="on";
 			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-ok";
-			
+
 			var played = rows.filter('.unplayed').show();
 			rows.not( played ).hide();
 		} else if (me.value == "on") {
-			me.className = "btn btn-default"; 	
+			me.className = "btn btn-default";
 			me.value="off";
 			document.getElementById("toggleComplete-glyph").className = "glyphicon glyphicon-remove";
-			
+
 			rows.show();
 		}
 	});
@@ -37,7 +37,7 @@ jQuery(document).ready(function($) {
 <div id="page-wrapper">
 	<div class="container-fluid">
 		<div class="row">
-			<h1 class="page-header">Update scores for {{ tournament }}</h1>		
+			<h1 class="page-header">Update scores for {{ tournament }}</h1>
 		</div>
 		{% with messages = get_flashed_messages() -%}
 			{% if messages %}
@@ -52,30 +52,34 @@ jQuery(document).ready(function($) {
 				</div>
 			{% endif %}
 		{%- endwith %}
+		<div class="alert alert-info" role="alert">
+			<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
+		</div>
+
 		<button id="toggleComplete" type="button" class="btn btn-default" value="off">
-			Hide Completed <span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+			Hide Completed <span id="toggleComplete-glyph" class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 		</button>
-	
+
 		<table id=games class="table table-striped">
 			<thead>
 				<tr>
 					<th>#</th>
 					<th>Start</th>
 					<th>Pool</th>
-					<th>Black</th>
-					<th></th>
 					<th>White</th>
 					<th></th>
-			
+					<th>Black</th>
+					<th></th>
+
 				</tr>
 			</thead>
 			<tbody>
-	
+
 			{% for game in games -%}
 				{% if (game.black_tid < 0) or (game.white_tid < 0) -%}
 				<tr class="unplayed">
 				{% else %}
-					{% if game.score_b != "--" -%} 
+					{% if game.score_b != "--" -%}
 					<tr class='clickableRow played' href='{{request.base_url}}?gid={{game.gid}}'>
 					{% else %}
 					<tr class='clickableRow unplayed' href='{{request.base_url}}?gid={{game.gid}}'>
@@ -83,19 +87,16 @@ jQuery(document).ready(function($) {
 				{%- endif %}
 					<td>{{ game.gid }}</td>
 					<td>{{ game.day }} {{ game.start_time }}</td>
-					<td>{{ game.pool }}</td>
-					<td class={{game.style_b}}>{{ game.black }} <strong>{{ game.note_b }}</stron></td>
-					<td>{{game.score_b}}</td>
+					<td class="border-right">{{ game.pool }}</td>
 					<td class={{game.style_w}}>{{ game.white }} <strong>{{ game.note_w }}</strong></td>
 					<td>{{game.score_w}}</td>
+					<td class={{game.style_b}}>{{ game.black }} <strong>{{ game.note_b }}</stron></td>
+					<td>{{game.score_b}}</td>
 				</tr>
 			{%- endfor %}
 			</tbody>
 		</table>
 
-		<div class="alert alert-info" role="alert">
-			<p>To update a game, simply click on the row. Scores for games without both teams identified cannot be entered.</p>
-		</div>
 	</div>
 </div>
 {% endblock main %}
