--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div id="page_body" class="container">
 	<div class="page-header" style="margin-top:0px;">
-		<h1 id="tournamentTitle">{{ tournament }}</h1>		
+		<h1 id="tournamentTitle">{{ tournament }}</h1>
 	</div>
 	<div class="row">
 	{% if team_list -%}
@@ -45,18 +45,18 @@
 			<li role="presentation"><a href="#standings" data-toggle="tab">Standings</a></li>
 			{% if placings %}<li role="presentation"><a href="#places" data-toggle="tab">Places</a></li>{% endif %}
 		</ul>
-	
+
 	<div id="tabContents" class="tab-content">
-			<div id="schedule" class="tab-pane fade active in">		
+			<div id="schedule" class="tab-pane fade active in">
 					<h1>{{ titleText }} Schedule </h1>
 					<nav id="dayPagerNav2">
 						<ul id="dayPager" class="pagination pagination-sm">
 							<li class="active toggleDay" day="All"><span>All</span></li>
 							<li class="toggleDay" day="Sat"><span>Sat</span></li>
-							<li class="toggleDay" day="Sun""><span>Sun</span></li>
+							<li class="toggleDay" day="Sun"><span>Sun</span></li>
 
 						</ul>
-					</nav>	
+					</nav>
 					<table id="games" class="table">
 						<thead>
 							<tr>
@@ -73,16 +73,16 @@
 							</tr>
 							<tr  class="{{ loop.cycle('odd', 'even') }} {{ game.day}}">
 								<td><strong>{{ game.day }} {{ game.start_time }}</strong></td>
-								<td><div class="color-box" style="background-color: #000000;"></div><span class="{{game.style_b}}">{{ game.black }}</span></td>
+								<td><div class="color-box" style="background-color: #FFFFFF;"></div><span class="{{game.style_w}}">{{ game.white }}</span></td>
 								<td>
-								{{game.score_b}} 
-								{% if game.note_b -%}
-									<span style="padding-left: 1em">{{ game.note_b }}</span>
-								{%- endif %}
+								{{game.score_w}}
+								{% if game.note_w -%}
+									<span style="padding-left: 1em">{{ game.note_w }}</span>
+								{% endif %}
 								</td>
 							</tr>
 							<tr  class="{{ loop.cycle('odd', 'even') }} {{ game.day}}">
-								<td> 
+								<td>
 								Pool: {{ game.pool }}
 								{% if game.pod_color and game.pod -%}
 									Pod: <span style="background-color:{{ game.pod_color }}; padding:0.5em">{{ game.pod }}</span>
@@ -90,18 +90,18 @@
 									Pod: {{ game.pod }}
 								{% endif %}
 								</td>
-								<td><div class="color-box" style="background-color: #FFFFFF;"></div><span class="{{game.style_w}}">{{ game.white }}</span></td>
+								<td><div class="color-box" style="background-color: #000000;"></div><span class="{{game.style_b}}">{{ game.black }}</span></td>
 								<td>
-								{{game.score_w}} 
-								{% if game.note_w -%}
-									<span style="padding-left: 1em">{{ game.note_w }}</span>
-								{% endif %}
+								{{game.score_b}}
+								{% if game.note_b -%}
+									<span style="padding-left: 1em">{{ game.note_b }}</span>
+								{%- endif %}
 								</td>
 							</tr>
 						{%- endfor %}
 						</tbody>
-					</table>	
-		
+					</table>
+
 					{% if noteText %}
 						<div class="alert alert-info" role="alert">
 							<p>{{ noteText }}</p>
@@ -161,14 +161,14 @@
 				{%- endfor %}
 				<tbody>
 			</table>
-			
+
 			<div class="alert alert-info" role="alert">
 				<p>
 				Points - Points earned from round-robin game play for standing</br>
 				Record - Record in games played for points in standing </br>
 				GA - Goals allowed in games played for standings, used as tie breaker </br>
 				GP - Games played for standings </br>
-				Overall - Total tournament record including non-standings games and brackets			
+				Overall - Total tournament record including non-standings games and brackets
 				</p>
 			</div>
 			</div>
@@ -200,14 +200,11 @@
 			</table>
 			</div>
 			{% endif %}
-			
+
 	</div> <!-- tabContent -->
-	
+
 	</div>
 
 	</div> <!-- row -->
 </div> <!-- container -->
 {%endblock main %}
-
-
-
