--- a/templates/admin/show_admin.html
+++ b/templates/admin/show_admin.html
@@ -13,7 +13,7 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
+                        <h1 class="page-header" id="tournamentTitle">
                             Admin Panel <small>{{ tournament }}</small>
                         </h1>
                     </div>
