Extended tournament info to include and display location and date Closes #16

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,13 @@
-#tournamentTitle {
+.tournament-header {
 	margin-top: 0px;
+}
+
+.tournament-title {
+	margin-top: 0px;
+}
+
+.tournament-info {
+	color: gray;
 }
 
 #dayPager {
