--- a/templates/admin/show_admin.html
+++ b/templates/admin/show_admin.html
@@ -13,10 +13,11 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header" id="tournamentTitle">
-                            Admin Panel <small>{{ tournament }}</small>
-                        </h1>
-                    </div>
+											<div class="page-header tournament-header">
+												<h1 class="tournament-title">{{ tournament.name }}</h1>
+												<h4 class="tournament-info">{{ tournament.location }} - {{ tournament.date_string }}</h4>
+											</div>
+										</div>
                 </div>
                 <!-- /.row -->
 
