Added support to /print for /print/pod to print pod schedules

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -53,6 +53,7 @@
 					<nav id="dayPagerNav2">
 						<ul id="dayPager" class="pagination pagination-sm">
 							<li class="active toggleDay" day="All"><span>All</span></li>
+							<li class="toggleDay" day="Fri"><span>Fri</span></li>
 							<li class="toggleDay" day="Sat"><span>Sat</span></li>
 							<li class="toggleDay" day="Sun"><span>Sun</span></li>
 
