--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -90,6 +90,8 @@
 									Pod: <span style="background-color:{{ game.pod_color }}; padding:0.5em">{{ game.pod }}</span>
 								{% elif game.pod %}
 									Pod: {{ game.pod }}
+								{% elif game.type == "CO" %}
+									<span style="background-color:#ccc; padding:0.2em">Cross Over</span>
 								{% endif %}
 								</td>
 								<td><div class="color-box" style="background-color: #000000;"></div><span class="{{game.style_b}}">{{ game.black }}</span></td>
