--- a/templates/admin/show_admin.html
+++ b/templates/admin/show_admin.html
@@ -6,142 +6,140 @@
 
 {% block main %}
 
-        <div id="page-wrapper">
+	<div id="page-wrapper">
 
-            <div class="container-fluid">
+	<div class="container-fluid">
 
-                <!-- Page Heading -->
-                <div class="row">
-                    <div class="col-lg-12">
-											<div class="page-header tournament-header">
-												<h1 class="tournament-title">{{ tournament.name }}</h1>
-												<h4 class="tournament-info">{{ tournament.location }} - {{ tournament.date_string }}</h4>
-											</div>
-										</div>
-                </div>
-                <!-- /.row -->
+		<!-- Page Heading -->
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="page-header tournament-header">
+				<h1 class="tournament-title">{{ tournament.name }}</h1>
+				<h4 class="tournament-info">{{ tournament.location }} - {{ tournament.date_string }}</h4>
+				</div>
+			</div>
+		</div>
+		<!-- /.row -->
 
-                <div class="row">
-                    <div class="col-lg-12">
-					{% with messages = get_flashed_messages() -%}
-						{% if messages %}
-							{% set last="" -%}
-							<div class="alert alert-danger" role="alert">
-							{% for message in messages %}
-								{% if message != last -%}
-								{{ message }}</br>
-								{%- endif %}
-								{% set last=message %}
-							{% endfor %}
-							</div>
-						{% endif %}
-					{%- endwith %}
-                    </div>
-                </div>
-                <!-- /.row -->
+		<div class="row">
+			<div class="col-lg-12">
+			{% with messages = get_flashed_messages() -%}
+				{% if messages %}
+					{% set last="" -%}
+					<div class="alert alert-danger" role="alert">
+					{% for message in messages %}
+						{% if message != last -%}
+							{{ message }}</br>
+						{%- endif %}
+						{% set last=message %}
+					{% endfor %}
+					</div>
+				{% endif %}
+			{%- endwith %}
+			</div>
+		</div>
+		<!-- /.row -->
 
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-wrench fa-fw"></i> Configs</h3>
-                            </div>
-                            <div class="panel-body">
-                            	<h4>Disable Webpage</h4>
-																{% if disable_message -%}
-																<div class="alert alert-danger" role="alert">
-																	<p>Site is currently disabled!</p>
-																</div>
-																{%- endif %}
-																<form name="site-active" action="/admin/update_config" method="POST">
-																<div class="input-group">
-																		<input type="hidden" name="config_id" value="site_active"/>
-																			{% if disable_message -%}
-																			<span class="input-group-addon">
-																				<input type="checkbox" aria-label="enabled" checked=checked name="active_toggle">
-																			</span>
-																			<input type="text" class="form-control" aria-label="..." name="message" value="{{ disable_message }}">
-																			{% else %}
-																			<span class="input-group-addon">
-																				<input type="checkbox" aria-label="disabled" name="active_toggle">
-																			</span>
-																			<input type="text" class="form-control" aria-label="..." name="message">
-																			{%- endif %}
-																		<span class="input-group-btn">
-																			<button class="btn btn-default" type="submit">Update</button>
-																		</span>
-																</div><!-- /input-group -->
-																</form>
-                            	<div class="well well-sm">
-                            		Use this to disable the page if there is an issue. Users will be presented with the
-                            		above message until the issue can be resolved.
-															</div>
-                            </div>
-													</div>
+		<div class="row">
+			<div class="col-lg-8">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title"><i class="fa fa-bar-wrench fa-fw"></i> Configs</h3>
+					</div>
+					<div class="panel-body">
+						<h4>Disable Webpage</h4>
+						{% if disable_message -%}
+						<div class="alert alert-danger" role="alert">
+							<p>Site is currently disabled!</p>
+						</div>
+						{%- endif %}
+						<form name="site-active" action="/admin/update_config" method="POST">
+						<div class="input-group">
+							<input type="hidden" name="config_id" value="site_active"/>
+							{% if disable_message -%}
+							<span class="input-group-addon">
+							<input type="checkbox" aria-label="enabled" checked=checked name="active_toggle">
+							</span>
+							<input type="text" class="form-control" aria-label="..." name="message" value="{{ disable_message }}">
+							{% else %}
+							<span class="input-group-addon">
+							<input type="checkbox" aria-label="disabled" name="active_toggle">
+							</span>
+							<input type="text" class="form-control" aria-label="..." name="message">
+							{%- endif %}
+							<span class="input-group-btn">
+							<button class="btn btn-default" type="submit">Update</button>
+							</span>
+						</div><!-- /input-group -->
+						</form>
+					<div class="well well-sm">
+						Use this to disable the page if there is an issue. Users will be presented with the
+						above message until the issue can be resolved.
+					</div>
+				</div>
+			</div>
 
-													{% if ties -%}
-													<div class="panel panel-default">
-														<div class="panel-heading">
-																<h3 class="panel-title"><i class="fa fa-bar-bell fa-fw"></i> Coin Flips</h3>
-														</div>
-														<div class="panel-body">
-                            	<h4>Resolve Ties</h4>
-															{% for tie in ties -%}
-																<form name="site-active" action="/admin/update_config" method="POST" class="coin-flip">
-																		<input type="hidden" name="config_id" value="coin_flip"/>
-																		<input type="hidden" name="id_a" value="{{tie.id_a}}"/>
-																		<input type="hidden" name="id_b" value="{{tie.id_b}}"/>
+			{% if ties -%}
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><i class="fa fa-bar-bell fa-fw"></i> Coin Flips</h3>
+				</div>
+				<div class="panel-body">
+					<h4>Resolve Ties</h4>
+					<div class="well well-sm">
+						Check the box next to the team that won the coinflip, enter them one at a time.
+					</div>
+						{% for tie in ties -%}
+						<form name="site-active" action="/admin/update_config" method="POST" class="coin-flip">
+							<input type="hidden" name="config_id" value="coin_flip"/>
+							<input type="hidden" name="id_a" value="{{tie.id_a}}"/>
+							<input type="hidden" name="id_b" value="{{tie.id_b}}"/>
 
-																		<div class="coin-flip">
-																			<span>
-																				<input type="radio" name="winner" value={{ tie.id_a }}>
-																				{{ tie.team_a }}
-																			</span>
-																			vs.
-																			<span>
-																				{{ tie.team_b}}
-																				<input type="radio" name="winner" value={{ tie.id_b }}>
-																			</span>
-																			<button class="btn btn-default" type="submit">Enter</button>
-																		</div><!-- /input-group -->
-																</form>
-															{%- endfor %}
-                            </div>
-                        </div>
-												{%- endif %}
+							<div class="coin-flip">
+								<span>
+								<input type="radio" name="winner" value={{ tie.id_a }}>
+								{{ tie.team_a }}
+								</span>
+								vs.
+								<span>
+								{{ tie.team_b}}
+								<input type="radio" name="winner" value={{ tie.id_b }}>
+								</span>
+								<button class="btn btn-default" type="submit">Enter</button>
+							</div><!-- /input-group -->
+						</form>
+						{%- endfor %}
+				</div>
+			</div>
+			{%- endif %}
+		</div> <!-- row -->
 
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Tournament Stats</h3>
-                            </div>
-                            <div class="panel-body">
-								<div class="list-group">
-									{% if stats['total_games'] %}
-									<a href="#" class="list-group-item">
-										Total Games Played
-										<span class="pull-right text-muted small"><em>{{ stats['total_games'][0]  }} of {{ stats['total_games'][1] }}</em>
-										</span>
-									</a>
-									{%- endif %}
+		<div class="col-lg-4">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Tournament Stats</h3>
+				</div>
+				<div class="panel-body">
+					<div class="list-group">
+						{% if stats['total_games'] %}
+						<a href="#" class="list-group-item">
+						Total Games Played
+						<span class="pull-right text-muted small"><em>{{ stats['total_games'][0]  }} of {{ stats['total_games'][1] }}</em>
+						</span>
+						</a>
+						{%- endif %}
 
-									{% if stats['round_robin'] %}
-									<a href="#" class="list-group-item">
-										Round-Robine games played
-										<span class="pull-right text-muted small"><em>{{ stats['round_robin'][0]  }} of {{ stats['round_robin'][1] }}</em>
-										</span>
-									</a>
-									{%- endif %}
-
-
-								</div>
-								<!-- /.list-group -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container-fluid -->
+						{% if stats['round_robin'] %}
+						<a href="#" class="list-group-item">
+						Round-Robine games played
+						<span class="pull-right text-muted small"><em>{{ stats['round_robin'][0]  }} of {{ stats['round_robin'][1] }}</em>
+						</span>
+						</a>
+						{%- endif %}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock main %}
