--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,10 +89,10 @@ tr.odd {
 
 @media print {
 	body{
-		font-size: 8px;
+		font-size: 12px;
 	}
 	
-	.row {
+	/*.row {
 		page-break-before: always;
-	}
+	}*/
 }
