--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    {% if tournament -%}
+    <meta name="description" content="UWHScores for {{ tournament.name }} - Follow game results and check updated standings through the day.">
+    {% else %}
+    <meta name="description" content="UWHScores for tournaments - Follow game results and check updated standings through the day.">
+    {% endif %}
     <meta name="author" content="">
 	<title>Underwater Hockey Scores</title>
 
