--- a/templates/show_print_groups.html
+++ b/templates/show_print_groups.html
@@ -1,47 +1,48 @@
-{% extends "tv_layout.html" %}
-
-{% block tabs %}
-<div id="page_body" style="margin-left:2em">
-{% endblock tabs %}
+{% extends "printable_layout.html" %}
 
 {% block games %}
 
-{% for group in group_games -%}
-<div class=row>
-	<div id="schedule" class="col-md-8">
-		<h1>Schedule for {{ group.name }}</h1>
-		<table id=games class="table table-striped">
-			<thead>
-				<tr>
-					<th>Game</th>
-					<th>Start Time</th>
-					<th>Pool</th>
-					<th>Pod</th>
-					<th>Black</th>
-					<th>White</th>
-				</tr>
-			</thead>
-			<tbody>
-			{% for game in group.games %}
-				<tr>
-					<td>{{ game.gid }}</td>
-					<td>{{ game.day }} {{ game.start_time }}</td>
-					<td>{{ game.pool }}</td> 
-					{% if game.pod_color %}
-						<td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td>
-					{% else %}
-						<td>{{ game.pod }} </td>
-					{% endif %}
-					<td class={{game.style_b}}>{{ game.black }}</td>
-					<td class={{game.style_w}}>{{ game.white }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
+<div id="page_body" style="margin-left:2em">
+	<div class="well well-sm col-md-6">
+		<h4>Check UWHScores.com for live updates</h4>
 	</div>
+	{% for group in group_games -%}
+	<div class=row>
+		<div id="schedule" class="col-md-8">
+			<h1>Schedule for {{ group.name }}</h1>
+			<table id=games class="table table-striped">
+				<thead>
+					<tr>
+						<th>Game</th>
+						<th>Start Time</th>
+						<th>Pool</th>
+						<th>Pod</th>
+						<th>Black</th>
+						<th>White</th>
+					</tr>
+				</thead>
+				<tbody>
+				{% for game in group.games %}
+					<tr>
+						<td>{{ game.gid }}</td>
+						<td>{{ game.day }} {{ game.start_time }}</td>
+						<td>{{ game.pool }}</td> 
+						{% if game.pod_color %}
+							<td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td>
+						{% else %}
+							<td>{{ game.pod }} </td>
+						{% endif %}
+						<td class={{game.style_b}}>{{ game.black }}</td>
+						<td class={{game.style_w}}>{{ game.white }}</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+		</div>
 
-</div> <!-- row -->
-{%- endfor %}
+	</div> <!-- row -->
+	{%- endfor %}
+</div>
 {% endblock games %}
 
 </div> <!-- container -->
