Small cleanup in rankings explanation text

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -177,11 +177,14 @@
 
 			<div class="alert alert-info" role="alert">
 				<p>
-				Points - Points earned from round-robin game play for standing</br>
-				Record - Record in games played for points in standing </br>
-				GA - Goals allowed in games played for standings, used as tie breaker </br>
-				GP - Games played for standings </br>
-				Overall - Total tournament record including non-standings games and brackets
+				<strong>Points -</strong> Primary ranking metric. Points earned from round-robin game play for standing. Teams earn two points for each win, and one point for a tie.</br>
+				<strong>Record -</strong> Record in games played for points in standing </br>
+				<strong>GA -</strong> Goals allowed in games played for standings, used as tie breaker </br>
+				<strong>GP -</strong> Games played for standings </br>
+				<strong>Overall -</strong> Total tournament record including non-standings games and brackets
+				</p>
+				<p>
+				For more information on how standings are calculated and tie-breakers please see the <a href=/faq>FAQ</a>				
 				</p>
 			</div>
 			</div>
