--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,7 @@
 
 	<!-- Custom Fonts le-1.4.5.min.js-->
 	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
-	
+
 	<!-- site specific css -->
 	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -37,13 +37,13 @@
 		// This button will increment the value
 		$('.toggleDay').click(function(e){
 			dayFilter = $(this).attr('day');
-			
+
 			//$(document.getElementById('#dayPager')).children().classList.remove('active');
 			$('#dayPager').find('.active').removeClass('active');
 			this.className= 'active toggleDay';
-			
+
 			var rows = $('#games tr:not(:first)');
-		
+
 			if ( dayFilter == "All"){
 				rows.show()
 			} else  {
@@ -52,6 +52,16 @@
 			}
 		});
 	});
+	{% if request.host_url == "http://uwhscores.com/" or request.host_url == "http://www.uwhsores.com/" -%}
+    <!-- Google Analytics -->
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-64622005-1', 'auto');
+    ga('send', 'pageview');
+	{%- endif %}
 	</script>
 
 
